# genesis-engine

./: .gitignore  .vercelignore  README-DEPLOYMENT.md  README.md  create_initial_data_function.sh  ingest.py  package-lock.json  pyproject.toml
data-pipeline/scripts/: cleanup.sh  create_function.sh
data-pipeline/scripts/data/: the_matter_with_things.txt
frontend/app/: .env.example  check-env.js  next.config.js  package-lock.json  package.json  seed-database.js
frontend/app/src/context/: AgentContext.tsx
frontend/app/src/hooks/: useReActAgent.ts
frontend/app/src/lib/: agent-store-broken.ts  agent-store.ts  agent-store.ts.new  agent-store.ts.original  aiClient.ts  clientTools.ts  fonts.ts  groqClient.ts  model-utils.ts  store.ts  supabaseAdmin.ts  supabaseClient.ts  types.ts
frontend/app/src/pages/: _app.tsx  _document.tsx  index.tsx
frontend/app/src/styles/: CommandCenter.css  globals.css
frontend/nextjs-chatbot/: .gitignore  package-lock.json  package.json
frontend/nextjs-chatbot/src/hooks/: useReActAgent.ts
frontend/nextjs-chatbot/src/lib/: aiClient.ts  (+4 more)
genesis-engine-fresh/: vercel.json
genesis-engine-production/frontend/app/: check-env.js  package-lock.json  test-supabase-connection.js
models/staging/: stg_sources.yml
models/staging/github/: stg_github__repos.sql
models/staging/huggingface/: stg_huggingface__models.sql
seeds/: Genesis_config - entities.csv  Genesis_config - technologies.csv  entities.csv
src/scripts/: enrich_citations.py  fetch_academic_output.py  fetch_arxiv.py  fetch_github.py  fetch_huggingface.py  sync_entities.py
(+82 files in other folders)
